# EAI4Math

./: .gitignore
autoformalization/: README.md  pyproject.toml
autoformalization/scripts/: get_mma.sh
autoformalization/src/autoformalization/: __init__.py  constants.py  link_mma.py  minif2f.py  predict.py
autoformalization/src/autoformalization/viz/: utils.py
scripts/: get_mma.sh
software_foundations/: hello.py  main.py  pyproject.toml
software_foundations/data/: multiset.v
src/autoformalization/: minif2f.py
