[project]
name = "autoformalization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai",
    "tiktoken",
    "datasets>=2.21.0",
    "numpy>=2.1.1",
    "streamlit>=1.38.0",
    "tenacity>=8.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
