[project]
name = "autoformalization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai",
    "tiktoken",
    "datasets",
    "numpy",
    "streamlit",
    "tenacity",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
